# Knowledgebase

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
public/: index.html
scripts/: pymupdf_server.py
src/: App.jsx  main.js  preload.js
src/app-shell/: AppShell.jsx  navVariants.js
src/contexts/: KnowledgeBaseContext.jsx
src/hooks/: useSettings.js
src/pages/: KnowledgeBasePage.jsx
src/pages/kb/: DocumentationPage.jsx  IngestionPipelinePage.jsx  KnowledgeStorePage.jsx  LiteraturePage.jsx  OntologyPage.jsx  ParsingPage.jsx  TrustGovernancePage.jsx  WorkflowsPage.jsx
src/pages/knowledge-base/: DocumentationTab.jsx  IngestionPipelineTab.jsx  KnowledgeStoreTab.jsx  LiteratureTab.jsx  OntologySchemaTab.jsx  ParsingTab.jsx  PdfReader.jsx  TrustGovernanceTab.jsx  WorkflowsTab.jsx
