[project]
name = "knowledgebase-python-tools"
version = "0.1.0"
description = "Python workspace for Knowledgebase PDF parsing and ingestion engines."
requires-python = ">=3.12"
dependencies = [
  "PyMuPDF",
  "pdfplumber",
  "docling",
  "easyocr",
  "markitdown",
  "llama-parse",
]

[tool.uv]
package = false
